[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scenes/Background_INTRO.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Cutscene.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sounds/((NFM))-ðŸŽ¶((CLASSICAL))-ðŸŽµRequiem - Dies Irae-ðŸŽ§Wolfgang Amadeus Mozart-ðŸ’¿((COPYRIGHT FREE MUSIC))ðŸ”Š.mp3" type="AudioStream" id=4]
[ext_resource path="res://Assets/Sounds/Kevin MacLeod - Windswept.mp3" type="AudioStream" id=5]
[ext_resource path="res://Assets/Sounds/Morning Mood â€“ Grieg (No Copyright Music).mp3" type="AudioStream" id=6]

[node name="CUTSCENE" type="Node2D"]
script = ExtResource( 3 )

[node name="Track1" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
autoplay = true

[node name="Track2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="Track3" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 5 )

[node name="Background_INTRO" parent="." instance=ExtResource( 1 )]
